4-Kubernetes_Ingress_and_Intro_to_ServiceMesh/IngressController/configs/2-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: blue
        image: teamcloudyuga/blue
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: blue
  labels:
    app: blue
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: blue
