4-Kubernetes_Ingress_and_Intro_to_ServiceMesh/IngressController/configs/blue.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blue
spec:
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: blue
        image: teamcloudyuga/blue
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: blue
  labels:
    app: blue
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: blue
