4-Kubernetes_Ingress_and_Intro_to_ServiceMesh/IngressController/configs/green.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: green
spec:
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: green
        image: teamcloudyuga/green
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: green
  labels:
    app: green
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: green
