4-Kubernetes_Ingress_and_Intro_to_ServiceMesh/IngressController/configs/ingress_path.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: path
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cy.myweb.com
    http:
      paths:
      - path: /blue
        backend:
          serviceName: blue
          servicePort: 80
      - path: /green
        backend:
          serviceName: green
          servicePort: 80
